Create smaller, more concise and readable tests.

--- a/integrationtests/golden-master.html
+++ b/integrationtests/golden-master.html
@@ -1,5 +1,5 @@
 
-		<section id="todoapp"><div data-reactid=".0"><header id="header" data-reactid=".0.0"><h1 data-reactid=".0.0.0">todos</h1><input id="new-todo" placeholder="What needs to be done?" data-reactid=".0.0.1"></header><section id="main" data-reactid=".0.1"><input id="toggle-all" type="checkbox" checked="" data-reactid=".0.1.0"><ul id="todo-list" data-reactid=".0.1.1"></ul></section><footer data-reactid=".0.2"></footer></div></section>
+		<section id="todoapp"><div><header id="header"><h1>todos</h1><input id="new-todo" placeholder="What needs to be done?"></header><section id="main"><input id="toggle-all" type="checkbox" checked=""><ul id="todo-list"></ul></section><footer></footer></div></section>
 		<footer id="info">
 			<p>Double-click to edit a todo</p>
 			<p>Created by <a href="http://github.com/petehunt/">petehunt</a></p>
