--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<!-- jsx is an optional syntactic sugar that transforms methods in React's
 		`render` into an HTML-looking format. Since the two models above are
 		unrelated to React, we didn't need those transforms. -->
+		<script type="text/jsx" src="js/todo-model.js"></script>
 		<script type="text/jsx" src="js/main.jsx"></script>
 	</body>
 </html>
