Recreate the golden masters ONLY using the todoapp-HTML-node.

--- a/integrationtests/golden-master.html
+++ b/integrationtests/golden-master.html
@@ -1,19 +1,1 @@
-
-		<section id="todoapp"><div><header id="header"><h1>todos</h1><input id="new-todo" placeholder="What needs to be done?"></header><section id="main"><input id="toggle-all" type="checkbox" checked=""><ul id="todo-list"></ul></section><footer></footer></div></section>
-		<footer id="info">
-			<p>Double-click to edit a todo</p>
-			<p>Created by <a href="http://github.com/petehunt/">petehunt</a></p>
-			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
-		</footer>
-
-		<script src="vendor/todomvc-common/base.js"></script>
-		<script src="vendor/react/react-with-addons.js"></script>
-		<script src="vendor/react/JSXTransformer.js"></script>
-		<script src="vendor/director/build/director.js"></script>
-
-		<!-- jsx is an optional syntactic sugar that transforms methods in React's
-		`render` into an HTML-looking format. Since the two models above are
-		unrelated to React, we didn't need those transforms. -->
-		<script type="text/jsx" src="js/main.jsx"></script>
-	
-
+<div><header id="header"><h1>todos</h1><input id="new-todo" placeholder="What needs to be done?"></header><section id="main"><input id="toggle-all" type="checkbox" checked=""><ul id="todo-list"></ul></section><footer></footer></div>
