--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		`render` into an HTML-looking format. Since the two models above are
 		unrelated to React, we didn't need those transforms. -->
 		<script type="text/jsx" src="js/todo-model.js"></script>
+		<script type="text/jsx" src="js/filter.js"></script>
 		<script type="text/jsx" src="js/main.jsx"></script>
 	</body>
 </html>
