--- a/integrationtests/golden-master-addOneItem.html
+++ b/integrationtests/golden-master-addOneItem.html
@@ -1,1 +1,19 @@
-<div><header id="header"><h1>todos</h1><input id="new-todo" placeholder="What needs to be done?"></header><section id="main"><input id="toggle-all" type="checkbox" checked=""><ul id="todo-list"><li class=""><div class="view"><input class="toggle" type="checkbox"><label>hallo</label><button class="destroy"></button></div><input class="edit" value="hallo"></li></ul></section><footer id="footer"><span id="todo-count"><strong>1</strong><span> </span><span>item</span><span>left</span></span><ul id="filters"><li><a href="#/" class="selected">All</a></li><li><a href="#/active" class="">Active</a></li><li><a href="#/completed" class="">Completed</a></li></ul><div></div></footer></div>
+
+		<section id="todoapp"><div><header id="header"><h1>todos</h1><input id="new-todo" placeholder="What needs to be done?"></header><section id="main"><input id="toggle-all" type="checkbox" checked=""><ul id="todo-list"><li class=""><div class="view"><input class="toggle" type="checkbox"><label>hallo</label><button class="destroy"></button></div><input class="edit" value="hallo"></li></ul></section><footer id="footer"><span id="todo-count"><strong>1</strong><span> </span><span>item</span><span>left</span></span><ul id="filters"><li><a href="#/" class="selected">All</a></li><li><a href="#/active" class="">Active</a></li><li><a href="#/completed" class="">Completed</a></li></ul><div></div></footer></div></section>
+		<footer id="info">
+			<p>Double-click to edit a todo</p>
+			<p>Created by <a href="http://github.com/petehunt/">petehunt</a></p>
+			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+		</footer>
+
+		<script src="vendor/todomvc-common/base.js"></script>
+		<script src="vendor/react/react-with-addons.js"></script>
+		<script src="vendor/react/JSXTransformer.js"></script>
+		<script src="vendor/director/build/director.js"></script>
+
+		<!-- jsx is an optional syntactic sugar that transforms methods in React's
+		`render` into an HTML-looking format. Since the two models above are
+		unrelated to React, we didn't need those transforms. -->
+		<script type="text/jsx" src="dist/index.js"></script>
+	
+
