--- a/integrationtests/golden-master-filterCompletedItems.html
+++ b/integrationtests/golden-master-filterCompletedItems.html
@@ -8,12 +8,8 @@
 
 		<script src="vendor/todomvc-common/base.js"></script>
 		<script src="vendor/react/react-with-addons.js"></script>
-		<script src="vendor/react/JSXTransformer.js"></script>
 		<script src="vendor/director/build/director.js"></script>
 
-		<!-- jsx is an optional syntactic sugar that transforms methods in React's
-		`render` into an HTML-looking format. Since the two models above are
-		unrelated to React, we didn't need those transforms. -->
-		<script type="text/jsx" src="dist/index.js"></script>
+		<script src="dist/index.js"></script>
 	
 
